Fix quote layout overlap and reduce timeline scroll height to remove empty whitespace

--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ body {
 .timeline-scroll-section {
     position: relative;
     width: 100%;
-    height: 350vh;
+    height: 180vh;
 }
 
 .sticky-viewport {
@@ -747,9 +747,9 @@ body {
 
 #el-5-47 {
     position: absolute;
-    left: 382.0px;
+    left: 320.0px;
     top: 61.6px;
-    width: 657.0px;
+    width: 780.0px;
     height: 236.0px;
     opacity: 0.990;
     color: rgb(0, 0, 0);
@@ -758,7 +758,7 @@ body {
 
 #el-5-48 {
     position: absolute;
-    left: 315.0px;
+    left: 240.0px;
     top: 32.7px;
     width: 52.0px;
     height: 118.0px;
@@ -769,7 +769,7 @@ body {
 
 #el-5-49 {
     position: absolute;
-    left: 1053.0px;
+    left: 1128.0px;
     top: 32.7px;
     width: 52.0px;
     height: 118.0px;
